add optional minDepth to sublayer prediciton; fix hard-coded 5 in smooth_bounds

--- a/example-layer-analysis.ipynb
+++ b/example-layer-analysis.ipynb
@@ -866,7 +866,7 @@
     "p = BoundaryPredictor(features=(\"soma_volume\",), num_PCA=None, use_depth=False, use_soma_vol_std=True, resolution=resolution, \n",
     "                      save_figs=True, verbose=True, \n",
     "                      name=name, cache_dir=cache_dir, l1_2_thresh=120_000, l6_WM_thresh=50_000, \n",
-    "                      soma_table_path=\".\\Minnie_soma_nuc_feature_model_83_1.pkl\")"
+    "                      soma_table_path=os.path.join(cache_dir, \"Minnie_soma_nuc_feature_model_83_1.pkl\"))"
    ]
   },
   {
@@ -915,6 +915,146 @@
     "smooth_pred.name = \"smooth_\" + smooth_pred.name\n",
     "p.smooth_bounds(smooth_pred, smoothness=0.8)\n",
     "smooth_pred.save()  # <- This is the final result!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d8adfa0",
+   "metadata": {},
+   "source": [
+    "# Generating the boundary between layer 6a and 6b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "451a10a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cortical_layers.SublayerPredictor import SubBoundaryPredictor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1fd2290d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resolution = np.array([4., 4., 40.])\n",
+    "# conservative bbox only containing well-segmented areas\n",
+    "seg_low_um = np.array([130_000, 50_000, 15_000]) * resolution / 1_000\n",
+    "seg_up_um = np.array([355_000, 323_500, 27_500]) * resolution / 1_000\n",
+    "name = \"sub6_soma_vol_and_density_second_half_only_200micron\"\n",
+    "cache_dir = r\".\\cortical_layers\"\n",
+    "p = SubBoundaryPredictor(features=(\"soma_volume\",),\n",
+    "                            num_PCA=None, use_depth=False, use_exc_soma_density=True, use_soma_vol_std=False,\n",
+    "                            resolution=resolution, save_figs=True, verbose=True, cache_dir=\".\\\\\" + name,\n",
+    "                            name=name, soma_table_path=os.path.join(cache_dir, \"Minnie_soma_nuc_feature_model_83_1.pkl\"))\n",
+    "c = LayerClassifier(data=f\"minnie65_phase3\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "874ea6ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "try:\n",
+    "    pred = LayerPrediction.load(os.path.join(name, f\"{name}_prediction.json\"))\n",
+    "except IOError:\n",
+    "    # THIS DOES THE PREDICTION. It may take an hour on a laptop.\n",
+    "    pred = p.predict(c.pred, layer=\"L6\", num_sublayers=2, min_depth=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "32865b6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# manual modifications based on proofreading all 512 plots of sub6_soma_vol_and_density_second_half_only_test\n",
+    "# pred.bounds[8][4] = 1.02\n",
+    "# pred.bounds[19][4] = 1.02\n",
+    "# pred.bounds[25][4] = 1.02\n",
+    "# pred.bounds[27][4] = 1.02\n",
+    "# pred.bounds[41][4] = 1.02\n",
+    "# pred.bounds[45][4] = 1.02\n",
+    "# pred.bounds[49][4] = 1.02\n",
+    "# pred.bounds[53][4] = 1.02\n",
+    "# pred.bounds[55][4] = 1.02\n",
+    "# pred.bounds[74][4] = 1.02\n",
+    "# pred.bounds[86][4] = 1.02\n",
+    "# pred.bounds[381][4] = 0.93\n",
+    "# pred.bounds[413][4] = 0.91\n",
+    "\n",
+    "# manual modifications based on proofreading all 512 plots of sub6_soma_vol_and_density_second_half_only_200micron\n",
+    "pred.bounds[9][4] = 1.02\n",
+    "pred.bounds[11][4] = 1.02\n",
+    "pred.bounds[14][4] = 1.02\n",
+    "pred.bounds[16][4] = 1.02\n",
+    "pred.bounds[19][4] = 1.02\n",
+    "pred.bounds[21][4] = 1.02\n",
+    "pred.bounds[45][4] = 1.02\n",
+    "pred.bounds[47][4] = 1.02\n",
+    "pred.bounds[77][4] = 1.02\n",
+    "pred.bounds[414:418, 4] = 0.93\n",
+    "pred.bounds[478][4] = 0.92\n",
+    "pred.bounds[446:451, 4] = 0.915"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b93e861c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# smooth out the results and save a copy\n",
+    "smooth_pred = pred.deepcopy()\n",
+    "smooth_pred.name = \"smooth_\" + smooth_pred.name\n",
+    "p.smooth_bounds(smooth_pred, smoothness=0.8)\n",
+    "smooth_pred.cache_dir = \".\\\\\" + name\n",
+    "smooth_pred.save()  # <- This is the final result!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3c1fa8e",
+   "metadata": {},
+   "source": [
+    "### make csv of points on 6a/b border mesh in this format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "be9e4f09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Coordinate 1,Coordinate 2,Ellipsoid Dimensions,Tags,Description,Segment IDs,Parent ID,Type,ID\n",
+    "# \"(325184, 116528, 20620)\",,,,,553407,,Point,\n",
+    "# \"(174944, 137648, 21113)\",,,,,258307,,Point,\n",
+    "# \"(286992, 125056, 23883)\",,,,,487512,,Point,\n",
+    "# \"(348352, 119296, 19182)\",,,,,610396,,Point,\n",
+    "\n",
+    "with open(\"mesh_points.csv\", \"w\") as f:\n",
+    "    text = \"Coordinate 1,Coordinate 2,Ellipsoid Dimensions,Tags,Description,Segment IDs,Parent ID,Type,ID\\n\"\n",
+    "    mids = []\n",
+    "    for col_nm, bounds_mm in zip(smooth_pred.cols_nm, smooth_pred.bounds):\n",
+    "        col_mid_nm = (col_nm[1] + col_nm[0]) / 2\n",
+    "        mids.append(col_mid_nm)\n",
+    "        x_vx = int(col_mid_nm[0] / 4)\n",
+    "        y_vx = int(bounds_mm[4] * 1_000_000 / 4)\n",
+    "        z_vx = int(col_mid_nm[2] / 40)\n",
+    "        text += f\"\\\"({x_vx}, {y_vx}, {z_vx})\\\",,,,,,,Point,\\n\"\n",
+    "    text = text[:-1]  # remove last newline\n",
+    "    f.write(text)"
    ]
   },
   {
