add sublayer predictions to LayerClassifier

--- a/example-layer-analysis.ipynb
+++ b/example-layer-analysis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "53f94c67",
    "metadata": {},
    "outputs": [],
@@ -922,7 +922,9 @@
    "id": "7d8adfa0",
    "metadata": {},
    "source": [
-    "# Generating the boundary between layer 6a and 6b"
+    "# Generating the boundary between layer 6a and 6b\n",
+    "\n",
+    "This follows the same procedure as above within layer 6. It only uses excitatory soma density and volume to determine the layer borders, and mandates that the border is placed more than half way between the layer 5-6 border and the layer 6-WM border."
    ]
   },
   {
@@ -937,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "1fd2290d",
    "metadata": {},
    "outputs": [],
@@ -946,7 +948,8 @@
     "# conservative bbox only containing well-segmented areas\n",
     "seg_low_um = np.array([130_000, 50_000, 15_000]) * resolution / 1_000\n",
     "seg_up_um = np.array([355_000, 323_500, 27_500]) * resolution / 1_000\n",
-    "name = \"sub6_soma_vol_and_density_second_half_only_200micron\"\n",
+    "# name = \"sub6_soma_vol_and_density_second_half_only_200micron\"\n",
+    "name = \"sub6_soma_vol_and_density_second_half_only_test\"\n",
     "cache_dir = r\".\\cortical_layers\"\n",
     "p = SubBoundaryPredictor(features=(\"soma_volume\",),\n",
     "                            num_PCA=None, use_depth=False, use_exc_soma_density=True, use_soma_vol_std=False,\n",
@@ -957,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "874ea6ce",
    "metadata": {},
    "outputs": [],
@@ -972,44 +975,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "32865b6d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# manual modifications based on proofreading all 512 plots of sub6_soma_vol_and_density_second_half_only_test\n",
-    "# pred.bounds[8][4] = 1.02\n",
-    "# pred.bounds[19][4] = 1.02\n",
-    "# pred.bounds[25][4] = 1.02\n",
-    "# pred.bounds[27][4] = 1.02\n",
-    "# pred.bounds[41][4] = 1.02\n",
-    "# pred.bounds[45][4] = 1.02\n",
-    "# pred.bounds[49][4] = 1.02\n",
-    "# pred.bounds[53][4] = 1.02\n",
-    "# pred.bounds[55][4] = 1.02\n",
-    "# pred.bounds[74][4] = 1.02\n",
-    "# pred.bounds[86][4] = 1.02\n",
-    "# pred.bounds[381][4] = 0.93\n",
-    "# pred.bounds[413][4] = 0.91\n",
+    "if name == \"sub6_soma_vol_and_density_second_half_only_test\":\n",
+    "    # manual modifications based on proof   reading all 512 plots of sub6_soma_vol_and_density_second_half_only_test\n",
+    "    pred.bounds[8][4] = 1.02\n",
+    "    pred.bounds[19][4] = 1.02\n",
+    "    pred.bounds[25][4] = 1.02\n",
+    "    pred.bounds[27][4] = 1.02\n",
+    "    pred.bounds[41][4] = 1.02\n",
+    "    pred.bounds[45][4] = 1.02\n",
+    "    pred.bounds[49][4] = 1.02\n",
+    "    pred.bounds[53][4] = 1.02\n",
+    "    pred.bounds[55][4] = 1.02\n",
+    "    pred.bounds[74][4] = 1.02\n",
+    "    pred.bounds[86][4] = 1.02\n",
+    "    pred.bounds[381][4] = 0.93\n",
+    "    pred.bounds[413][4] = 0.91\n",
     "\n",
-    "# manual modifications based on proofreading all 512 plots of sub6_soma_vol_and_density_second_half_only_200micron\n",
-    "pred.bounds[9][4] = 1.02\n",
-    "pred.bounds[11][4] = 1.02\n",
-    "pred.bounds[14][4] = 1.02\n",
-    "pred.bounds[16][4] = 1.02\n",
-    "pred.bounds[19][4] = 1.02\n",
-    "pred.bounds[21][4] = 1.02\n",
-    "pred.bounds[45][4] = 1.02\n",
-    "pred.bounds[47][4] = 1.02\n",
-    "pred.bounds[77][4] = 1.02\n",
-    "pred.bounds[414:418, 4] = 0.93\n",
-    "pred.bounds[478][4] = 0.92\n",
-    "pred.bounds[446:451, 4] = 0.915"
+    "if name == \"sub6_soma_vol_and_density_second_half_only_200micron\":\n",
+    "    # manual modifications based on proofreading all 512 plots of sub6_soma_vol_and_density_second_half_only_200micron\n",
+    "    pred.bounds[9][4] = 1.02\n",
+    "    pred.bounds[11][4] = 1.02\n",
+    "    pred.bounds[14][4] = 1.02\n",
+    "    pred.bounds[16][4] = 1.02\n",
+    "    pred.bounds[19][4] = 1.02\n",
+    "    pred.bounds[21][4] = 1.02\n",
+    "    pred.bounds[45][4] = 1.02\n",
+    "    pred.bounds[47][4] = 1.02\n",
+    "    pred.bounds[77][4] = 1.02\n",
+    "    pred.bounds[414:418, 4] = 0.93\n",
+    "    pred.bounds[478][4] = 0.92\n",
+    "    pred.bounds[446:451, 4] = 0.915"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "b93e861c",
    "metadata": {},
    "outputs": [],
@@ -1032,18 +1037,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "be9e4f09",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ### CSV example ###\n",
     "# Coordinate 1,Coordinate 2,Ellipsoid Dimensions,Tags,Description,Segment IDs,Parent ID,Type,ID\n",
     "# \"(325184, 116528, 20620)\",,,,,553407,,Point,\n",
     "# \"(174944, 137648, 21113)\",,,,,258307,,Point,\n",
     "# \"(286992, 125056, 23883)\",,,,,487512,,Point,\n",
     "# \"(348352, 119296, 19182)\",,,,,610396,,Point,\n",
     "\n",
-    "with open(\"mesh_points.csv\", \"w\") as f:\n",
+    "with open(f\"mesh_points{name}.csv\", \"w\") as f:\n",
     "    text = \"Coordinate 1,Coordinate 2,Ellipsoid Dimensions,Tags,Description,Segment IDs,Parent ID,Type,ID\\n\"\n",
     "    mids = []\n",
     "    for col_nm, bounds_mm in zip(smooth_pred.cols_nm, smooth_pred.bounds):\n",
