add layer labels to deepcopy

--- a/example-layer-analysis.ipynb
+++ b/example-layer-analysis.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 44,
    "id": "53f94c67",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "id": "05a5b1a5",
    "metadata": {},
    "outputs": [],
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "id": "451a10a9",
    "metadata": {},
    "outputs": [],
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "id": "1fd2290d",
    "metadata": {},
    "outputs": [],
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 49,
    "id": "874ea6ce",
    "metadata": {},
    "outputs": [],
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "id": "32865b6d",
    "metadata": {},
    "outputs": [],
@@ -1029,28 +1029,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 51,
    "id": "222e7715",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['L1', 'L23', 'L4', 'L5', 'L6a', 'L6b', 'WM']"
+       "['L1', 'L23', 'L4', 'L5', 'L6', 'WM']"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pred.layer_labels"
+    "c = LayerClassifier(data=\"minnie65_phase3-sub6\")\n",
+    "c.pred.layer_labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 53,
    "id": "b93e861c",
    "metadata": {},
    "outputs": [],
